Fix a few dark mode issues

--- a/app/assets/stylesheets/_dark.scss
+++ b/app/assets/stylesheets/_dark.scss
@@ -82,6 +82,7 @@ html[data-dark='true'] {
 
   .retrofees,
   .card,
+  .menu__content,
   .modal {
     background-color: $darkless;
   }
@@ -102,11 +103,10 @@ html[data-dark='true'] {
     box-shadow: -2px -4px 8px rgba(0, 0, 0, 0.125),
       4px 8px 16px rgba(0, 0, 0, 0.25);
   }
-  .dock__card {
-    box-shadow: -2px -4px 6px rgba(0, 0, 0, 0.125),
-      3px 6px 12px rgba(0, 0, 0, 0.25);
-
-    @media (min-width: 32em) {
+  @media (min-width: 32em) {
+    .dock__card {
+      box-shadow: -2px -4px 6px rgba(0, 0, 0, 0.125),
+        3px 6px 12px rgba(0, 0, 0, 0.25);
       background-color: $darkless;
     }
   }
